# flocx-market

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  README.md  flakeight.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.tox/pep8/: .tox-config1
.tox/py37/: .tox-config1
etc/flocx-market/: flocx-market-config-generator.conf  flocx-market-policy-generator.conf  flocx-market.conf  flocx-market.conf.sample
flocx_market/: .env  api.py  db.py  matcher.py  version.py
flocx_market/api/: app.py  bid.py  config.py  contract.py  hooks.py  offer.py  offer_contract_relationship.py  root.py  service.py
flocx_market/cmd/: __init__.py  api.py  app.py  dbsync.py  manager.py  start_service.py
flocx_market/common/: config.py  exception.py  policy.py  service.py  statuses.py
flocx_market/conf/: __init__.py  api.py  dummy_node.py  flask.py  ironic.py  manager.py  netconf.py  opts.py  pecan.py
flocx_market/db/: api.py  models.py  orm.py
flocx_market/manager/: service.py
flocx_market/matcher/: match_engine.py  matcher.py
flocx_market/models/: offer.py
flocx_market/objects/: __init__.py  base.py  bid.py  contract.py  fields.py  offer.py  offer_contract_relationship.py
flocx_market/resource_objects/: dummy_node.py  ironic_node.py  resource_object_factory.py  resource_types.py
flocx_market/resources/: offer.py  validator.py
flocx_market/tests/: base_test.py  test_base.py  test_units.py
scripts/: check-conflict-markers.sh  check-sorted.sh  flake8.sh  test_functions.sh
scripts/hooks/: commit-msg  pre-commit
(+54 files in other folders)
