[metadata]
name = flocx_market
summary = FLOCX Marketplace
description-file = README.md

[files]
packages =
    flocx_market

[entry_points]
esi_leap.database.migration_backend =
	#sqlalchemy = esi_leap.db.sqlalchemy.migration
oslo.config.opts =
    flocx-market.conf = flocx_market.conf.opts:list_opts
