[metadata]
name = flocx_market
summary = FLOCX Marketplace
description-file = README.md

[files]
packages =
    flocx_market

[entry_points]
oslo.config.opts =
    flocx-market.conf = flocx_market.conf.opts:list_opts
console_scripts =
    flocx-market-api = flocx_market.cmd.api:main
    flocx-market-dbsync = flocx_market.cmd.dbsync:main
    flocx-market-manager = flocx_market.cmd.manager:main
